[gd_scene load_steps=10 format=2]

[ext_resource path="res://Entities/Legacy/Key/Material_003.material" type="Material" id=1]
[ext_resource path="res://res/txrs/key_numbers.png" type="Texture" id=2]
[ext_resource path="res://Entities/Legacy/Key/Key.gd" type="Script" id=3]
[ext_resource path="res://res/sfx/blip.ogg" type="AudioStream" id=4]

[sub_resource type="ArrayMesh" id=1]
resource_name = "Key"
surfaces/0 = {
"aabb": AABB( -0.0133257, -0.414879, -0.417656, 1.00005e-05, 0.838715, 0.845995 ),
"array_data": PoolByteArray( 39, 84, 90, 188, 70, 47, 113, 62, 71, 8, 41, 62, 129, 0, 0, 0, 0, 3, 130, 129, 98, 53, 121, 52, 39, 84, 90, 188, 236, 107, 36, 62, 222, 72, 180, 62, 129, 0, 0, 0, 0, 4, 130, 129, 215, 48, 93, 53, 39, 84, 90, 188, 112, 34, 35, 62, 20, 231, 120, 62, 129, 0, 0, 0, 0, 252, 130, 129, 100, 52, 86, 53, 39, 84, 90, 188, 70, 47, 113, 62, 71, 8, 41, 62, 129, 0, 0, 0, 0, 3, 130, 129, 98, 53, 121, 52, 39, 84, 90, 188, 184, 74, 116, 62, 73, 79, 219, 62, 129, 0, 0, 0, 0, 2, 130, 129, 103, 45, 60, 52, 39, 84, 90, 188, 236, 107, 36, 62, 222, 72, 180, 62, 129, 0, 0, 0, 0, 4, 130, 129, 215, 48, 93, 53, 39, 84, 90, 188, 248, 108, 176, 62, 203, 190, 39, 62, 129, 0, 0, 0, 0, 2, 130, 129, 121, 53, 177, 48, 39, 84, 90, 188, 184, 74, 116, 62, 73, 79, 219, 62, 129, 0, 0, 0, 0, 2, 130, 129, 103, 45, 60, 52, 39, 84, 90, 188, 70, 47, 113, 62, 71, 8, 41, 62, 129, 0, 0, 0, 0, 3, 130, 129, 98, 53, 121, 52, 39, 84, 90, 188, 248, 108, 176, 62, 203, 190, 39, 62, 129, 0, 0, 0, 0, 2, 130, 129, 121, 53, 177, 48, 39, 84, 90, 188, 178, 250, 177, 62, 141, 170, 218, 62, 129, 0, 0, 0, 0, 0, 130, 129, 126, 45, 154, 48, 39, 84, 90, 188, 184, 74, 116, 62, 73, 79, 219, 62, 129, 0, 0, 0, 0, 2, 130, 129, 103, 45, 60, 52, 39, 84, 90, 188, 94, 92, 216, 62, 160, 203, 117, 62, 129, 0, 0, 0, 0, 0, 130, 129, 93, 52, 223, 44, 39, 84, 90, 188, 178, 250, 177, 62, 141, 170, 218, 62, 129, 0, 0, 0, 0, 0, 130, 129, 126, 45, 154, 48, 39, 84, 90, 188, 248, 108, 176, 62, 203, 190, 39, 62, 129, 0, 0, 0, 0, 2, 130, 129, 121, 53, 177, 48, 39, 84, 90, 188, 94, 92, 216, 62, 160, 203, 117, 62, 129, 0, 0, 0, 0, 0, 130, 129, 93, 52, 223, 44, 39, 84, 90, 188, 28, 1, 217, 62, 37, 187, 178, 62, 129, 0, 0, 0, 0, 2, 130, 129, 242, 48, 166, 44, 39, 84, 90, 188, 178, 250, 177, 62, 141, 170, 218, 62, 129, 0, 0, 0, 0, 0, 130, 129, 126, 45, 154, 48, 38, 84, 90, 188, 143, 100, 173, 190, 245, 196, 202, 190, 129, 0, 0, 0, 0, 26, 132, 129, 254, 58, 210, 58, 40, 84, 90, 188, 93, 145, 194, 190, 26, 100, 145, 190, 129, 0, 0, 0, 0, 26, 132, 129, 67, 58, 241, 58, 38, 84, 90, 188, 249, 106, 212, 190, 147, 213, 162, 190, 129, 0, 0, 0, 0, 26, 132, 129, 134, 58, 56, 59, 38, 84, 90, 188, 143, 100, 173, 190, 245, 196, 202, 190, 129, 0, 0, 0, 0, 26, 132, 129, 254, 58, 210, 58, 40, 84, 90, 188, 244, 138, 155, 190, 124, 83, 185, 190, 129, 0, 0, 0, 0, 26, 132, 129, 187, 58, 140, 58, 40, 84, 90, 188, 93, 145, 194, 190, 26, 100, 145, 190, 129, 0, 0, 0, 0, 26, 132, 129, 67, 58, 241, 58, 40, 84, 90, 188, 244, 138, 155, 190, 124, 83, 185, 190, 129, 0, 0, 0, 0, 26, 132, 129, 187, 58, 140, 58, 39, 84, 90, 188, 17, 253, 159, 190, 18, 51, 95, 190, 129, 0, 0, 0, 0, 26, 132, 129, 193, 57, 103, 58, 40, 84, 90, 188, 93, 145, 194, 190, 26, 100, 145, 190, 129, 0, 0, 0, 0, 26, 132, 129, 67, 58, 241, 58, 40, 84, 90, 188, 244, 138, 155, 190, 124, 83, 185, 190, 129, 0, 0, 0, 0, 26, 132, 129, 187, 58, 140, 58, 39, 84, 90, 188, 80, 237, 113, 190, 236, 136, 151, 190, 129, 0, 0, 0, 0, 27, 132, 129, 53, 58, 9, 58, 39, 84, 90, 188, 17, 253, 159, 190, 18, 51, 95, 190, 129, 0, 0, 0, 0, 26, 132, 129, 193, 57, 103, 58, 40, 84, 90, 188, 244, 131, 54, 190, 23, 3, 117, 190, 129, 0, 0, 0, 0, 25, 132, 129, 197, 57, 140, 57, 39, 84, 90, 188, 112, 34, 35, 62, 20, 231, 120, 62, 129, 0, 0, 0, 0, 21, 131, 129, 100, 52, 86, 53, 40, 84, 90, 188, 99, 72, 130, 190, 80, 36, 37, 190, 129, 0, 0, 0, 0, 25, 132, 129, 81, 57, 241, 57, 39, 84, 90, 188, 70, 47, 113, 62, 71, 8, 41, 62, 129, 0, 0, 0, 0, 21, 131, 129, 98, 53, 121, 52, 39, 84, 90, 188, 112, 34, 35, 62, 20, 231, 120, 62, 129, 0, 0, 0, 0, 21, 131, 129, 100, 52, 86, 53, 40, 84, 90, 188, 244, 131, 54, 190, 23, 3, 117, 190, 129, 0, 0, 0, 0, 25, 132, 129, 197, 57, 140, 57, 38, 84, 90, 188, 180, 115, 96, 190, 228, 121, 160, 190, 129, 0, 0, 0, 0, 221, 134, 129, 128, 58, 193, 57, 40, 84, 90, 188, 244, 131, 54, 190, 23, 3, 117, 190, 129, 0, 0, 0, 0, 226, 133, 129, 197, 57, 140, 57, 39, 84, 90, 188, 80, 237, 113, 190, 236, 136, 151, 190, 129, 0, 0, 0, 0, 217, 136, 129, 53, 58, 9, 58, 32, 84, 90, 188, 52, 147, 253, 189, 17, 5, 151, 190, 129, 0, 0, 0, 0, 228, 133, 129, 94, 58, 246, 56, 40, 84, 90, 188, 244, 131, 54, 190, 23, 3, 117, 190, 129, 0, 0, 0, 0, 226, 133, 129, 197, 57, 140, 57, 38, 84, 90, 188, 180, 115, 96, 190, 228, 121, 160, 190, 129, 0, 0, 0, 0, 221, 134, 129, 128, 58, 193, 57, 32, 84, 90, 188, 144, 91, 127, 190, 1, 215, 213, 190, 129, 0, 0, 0, 0, 236, 131, 129, 83, 59, 248, 57, 39, 84, 90, 188, 80, 237, 113, 190, 236, 136, 151, 190, 129, 0, 0, 0, 0, 237, 131, 129, 53, 58, 9, 58, 40, 84, 90, 188, 244, 138, 155, 190, 124, 83, 185, 190, 129, 0, 0, 0, 0, 236, 131, 129, 187, 58, 140, 58, 38, 84, 90, 188, 180, 115, 96, 190, 228, 121, 160, 190, 129, 0, 0, 0, 0, 238, 131, 129, 128, 58, 193, 57, 39, 84, 90, 188, 80, 237, 113, 190, 236, 136, 151, 190, 129, 0, 0, 0, 0, 237, 131, 129, 53, 58, 9, 58, 32, 84, 90, 188, 144, 91, 127, 190, 1, 215, 213, 190, 129, 0, 0, 0, 0, 236, 131, 129, 83, 59, 248, 57, 39, 84, 90, 188, 80, 237, 113, 190, 236, 136, 151, 190, 129, 0, 0, 0, 0, 29, 133, 129, 53, 58, 9, 58, 40, 84, 90, 188, 99, 72, 130, 190, 80, 36, 37, 190, 129, 0, 0, 0, 0, 29, 133, 129, 81, 57, 241, 57, 39, 84, 90, 188, 17, 253, 159, 190, 18, 51, 95, 190, 129, 0, 0, 0, 0, 29, 133, 129, 193, 57, 103, 58, 39, 84, 90, 188, 80, 237, 113, 190, 236, 136, 151, 190, 129, 0, 0, 0, 0, 29, 133, 129, 53, 58, 9, 58, 40, 84, 90, 188, 244, 131, 54, 190, 23, 3, 117, 190, 129, 0, 0, 0, 0, 29, 133, 129, 197, 57, 140, 57, 40, 84, 90, 188, 99, 72, 130, 190, 80, 36, 37, 190, 129, 0, 0, 0, 0, 29, 133, 129, 81, 57, 241, 57 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 54
}

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_transparent = true
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 0.083, 1, 1 )

[sub_resource type="QuadMesh" id=4]
resource_local_to_scene = true
material = SubResource( 3 )
size = Vector2( 0.5, 0.5 )

[sub_resource type="Animation" id=2]
resource_name = "Spin"
length = 10.4167
loop = true
tracks/0/type = "transform"
tracks/0/path = NodePath("Armature/Bone")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 10.4167, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("Armature")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0.0666667, 1, 0, 0, 0, 0, 0.00757003, 0, 0.999971, 1, 1, 1, 0.666667, 1, 0, 0, 0, 0, 0.188125, 0, 0.982145, 1, 1, 1, 1.26667, 1, 0, 0, 0, 0, 0.362487, 0, 0.931989, 1, 1, 1, 1.86667, 1, 0, 0, 0, 0, 0.524917, 0, 0.851153, 1, 1, 1, 2.46667, 1, 0, 0, 0, 0, 0.670068, 0, 0.7423, 1, 1, 1, 3.06667, 1, 0, 0, 0, 0, 0.793161, 0, 0.609012, 1, 1, 1, 3.66667, 1, 0, 0, 0, 0, 0.890146, 0, 0.455676, 1, 1, 1, 4.26667, 1, 0, 0, 0, 0, 0.957828, 0, 0.287341, 1, 1, 1, 4.86666, 1, 0, 0, 0, 0, 0.993982, 0, 0.109547, 1, 1, 1, 5.26666, 1, 0, 0, 0, 0, 0.999936, 0, -0.0113545, 1, 1, 1, 5.33333, 1, 0, 0, 0, 0, -0.999503, 0, 0.0315358, 1, 1, 1, 5.93333, 1, 0, 0, 0, 0, -0.977354, 0, 0.211612, 1, 1, 1, 6.53333, 1, 0, 0, 0, 0, -0.923033, 0, 0.384721, 1, 1, 1, 7.13333, 1, 0, 0, 0, 0, -0.838328, 0, 0.545167, 1, 1, 1, 7.73333, 1, 0, 0, 0, 0, -0.726026, 0, 0.687667, 1, 1, 1, 8.33333, 1, 0, 0, 0, 0, -0.589826, 0, 0.80753, 1, 1, 1, 8.93333, 1, 0, 0, 0, 0, -0.43421, 0, 0.900812, 1, 1, 1, 9.53333, 1, 0, 0, 0, 0, -0.264301, 0, 0.96444, 1, 1, 1, 10.1333, 1, 0, 0, 0, 0, -0.0856913, 0, 0.996322, 1, 1, 1, 10.4167, 1, 0, 0, 0, 0, 8.74228e-08, 0, 1, 1, 1, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.269542, 0.241032, 0.324427 )

[node name="Key" type="Spatial"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
script = ExtResource( 3 )

[node name="Armature" type="Spatial" parent="."]

[node name="Key" type="MeshInstance" parent="Armature"]
mesh = SubResource( 1 )
material/0 = null

[node name="Bone" type="Spatial" parent="Armature"]

[node name="KeyDisplay" type="Spatial" parent="Armature/Bone"]
transform = Transform( 0.999185, 0, -0.0201814, 0, 0.5, 0, 0.0403628, 0, 0.499593, -0.005, 0.298288, 0.292975 )

[node name="KeyDisplay" type="MeshInstance" parent="Armature/Bone/KeyDisplay"]
transform = Transform( 1.1921e-07, -1.62921e-07, 1, 1.03316e-07, 1, 1.62921e-07, -1, 1.03316e-07, 1.1921e-07, 0.003, 0.006, 0.006 )
mesh = SubResource( 4 )
material/0 = null

[node name="KeyDisplay2" type="MeshInstance" parent="Armature/Bone/KeyDisplay"]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.015, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Spin = SubResource( 2 )

[node name="PickupSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0733162, 0 )
shape = SubResource( 5 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
